# pitaya-rs

./: .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  TODO.md  build.rs  cbindgen.toml  docker-compose.yml  pitaya.h
.github/workflows/: rust.yml
example-pitaya-server/: go.mod  go.sum  main.go
example-pitaya-server/protos/: cluster.pb.go  cluster.proto
example-pitaya-server/services/: connector.go  room.go
examples/: basic.rs  client.rs
examples/c/: bind.pb.c  bind.pb.h  build.sh  default.toml  doc.pb.c  doc.pb.h  docmsg.pb.c  docmsg.pb.h  error.pb.c  error.pb.h  kick.pb.c  kick.pb.h  main.c  msg.pb.c  msg.pb.h  pitaya.pb.c  pitaya.pb.h  protodescriptor.pb.c  protodescriptor.pb.h  push.pb.c  push.pb.h  request.pb.c  request.pb.h  response.pb.c  response.pb.h  session.pb.c  session.pb.h
examples/config/: production.toml
pitaya-sharp/: CHANGELOG.md  Makefile  README.md  csharp.toml
pitaya-sharp/NPitaya/: NPitaya.csproj
pitaya-sharp/NPitaya/src/: CustomMetrics.cs  MetricsReporter.cs  NativeInterop.cs  PitayaCluster.API.cs  PitayaCluster.Native.cs  PitayaCluster.RPC.cs  RpcClient.cs  Session.cs
pitaya-sharp/NPitaya/src/Metrics/: CustomMetrics.cs  MetricsConfiguration.cs  MetricsReporter.cs  PitayaReporter.cs  PrometheusReporter.cs
pitaya-sharp/NPitaya/src/Models/: PitayaSession.cs
pitaya-sharp/NPitaya/src/Serializer/: JSONSerializer.cs
pitaya-sharp/NPitaya/src/Utils/: Utils.cs
pitaya-sharp/exampleapp/: Dockerfile  Program.cs  exampleapp.csproj
pitaya-sharp/exampleapp/Handlers/: TestHandler.cs
pitaya-sharp/exampleapp/k8s/pitaya-sharp-example/: Chart.yaml  etcd-values.yaml  nats-values.yaml  values.yaml
pitaya-sharp/exampleapp/k8s/pitaya-sharp-example/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
pitaya-sharp/exampleapp/remotes/: TestRemote.cs
src/: constants.rs  discovery.rs  error.rs  ffi.rs  lib.rs  main.rs  metrics.rs  rpc.rs  server.rs  settings.rs  test_helpers.rs  utils.rs
src/cluster/: mod.rs  rpc.rs  rpc_client.rs  rpc_server.rs
src/cluster/discovery/: mod.rs  tasks.rs
src/discovery/: tasks.rs
src/etcd_nats_cluster/: Cargo.toml
src/etcd_nats_cluster/src/: discovery.rs  lib.rs  rpc_client.rs  rpc_server.rs  tasks.rs
src/pitaya/: Cargo.toml  Makefile.toml  build.rs  pitaya.h
src/pitaya/benches/: rpc_call.rs  self_rpc_call.rs
src/pitaya/examples/: basic.rs  cluster.rs  remote.rs
src/pitaya/src/: constants.rs  context.rs  error.rs  ffi.rs  lib.rs  settings.rs
src/pitaya/src/cluster/: mod.rs  rpc_client.rs  rpc_server.rs  server.rs
src/pitaya/src/cluster/discovery/: mod.rs  tasks.rs
src/pitaya/src/ffi/: metrics.rs
src/pitaya_core/: Cargo.toml  build.rs
src/pitaya_core/src/: cluster.rs  constants.rs  context.rs  handler.rs  lib.rs  message.rs  metrics.rs  service.rs  session.rs  state.rs  utils.rs
src/pitaya_core/src/cluster/: server.rs
src/pitaya_etcd_nats_cluster/: Cargo.toml
src/pitaya_etcd_nats_cluster/src/: constants.rs  discovery.rs  rpc_client.rs  rpc_server.rs  settings.rs  tasks.rs
src/pitaya_macros/: Cargo.toml
src/pitaya_macros/src/: lib.rs  main.rs
src/prometheus_metrics/: Cargo.toml
src/prometheus_metrics/src/: lib.rs
src/test_helpers/: Cargo.toml
src/test_helpers/src/: lib.rs
