[package]
name = "pitaya-rs"
version = "0.1.0"
authors = ["Leonardo Hahn <leonardo.hahn@tfgco.com>"]
edition = "2018"

[lib]
name = "pitaya"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2.1"
prost = "0.6.1"
nats = "0.5"
etcd-client = "0.2"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.33"
log = "0.4.8"
serde_json = "1.0"
serde = "1.0"
pretty_env_logger = "0.4"
rand = "0.7.3"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4"

[build-dependencies]
prost-build = "0.6.1"
cbindgen = "0.14.2"

