[package]
name = "pitaya-rs"
version = "0.1.0"
authors = ["Leonardo Hahn <leonardo.hahn@tfgco.com>"]
edition = "2018"

[lib]
name = "pitaya"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tonic = "0.2.1"
prost = "0.6.1"
nats = "0.5"
etcd-client = "0.2"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.33"
serde_json = "1.0"
serde = "1.0"
rand = "0.7.3"
uuid = { version = "0.8", features = ["v4"] }
slog = { version = "2.5", features = ["max_level_trace"] }
slog-json = "2.3"
slog-term = "2.6.0"
slog-async = "2.5.0"
config = "0.10"
humantime-serde = "1.0"
prometheus = "0.9"

[build-dependencies]
prost-build = "0.6.1"
cbindgen = "0.14.2"

