[package]
name = "etcd_nats_cluster"
version = "0.1.0"
authors = ["Leonardo Hahn <leonardo.hahn@tfgco.com>"]
edition = "2018"

[dependencies]
pitaya_core = { path = "../pitaya_core" }

prost = "0.6.1"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
nats = "0.5"
etcd-client = "0.2"
slog = { version = "2.5", features = ["max_level_trace"] }
humantime-serde = "1.0"

[dev-dependencies]
test_helpers = { path = "../test_helpers" }
