[package]
name = "pitaya"
version = "0.1.0"
authors = ["Leonardo Hahn <leonardo.hahn@tfgco.com>"]
edition = "2018"

[lib]
name = "pitaya"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
proc-macro = true

[[bench]]
name = "self_rpc_call"
harness = false

[[bench]]
name = "rpc_call"
harness = false

[dependencies]
pitaya_core = { path = "../pitaya_core" }
pitaya_macros = { path = "../pitaya_macros" }
etcd_nats_cluster = { path = "../etcd_nats_cluster" }
prometheus_metrics = { path = "../prometheus_metrics" }
test_helpers = { path = "../test_helpers" }

prost = "0.6.1"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
serde = "1.0"
rand = "0.7.3"
uuid = { version = "0.8", features = ["v4"] }
slog = { version = "2.5", features = ["max_level_trace"] }
slog-json = "2.3"
slog-term = "2.6.0"
slog-async = "2.5.0"
humantime-serde = "1.0"
config = "0.10"
thiserror = "1.0"
state = "0.4.1"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
mockall = "0.7"
criterion = "0.3"

[build-dependencies]
cbindgen = "0.14"
prost-build = "0.6"
