[package]
name = "pitaya_core"
version = "0.1.0"
authors = ["Leonardo Hahn <leonardo.hahn@tfgco.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
prost = "0.6.1"
slog = { version = "2.5", features = ["max_level_trace"] }
lazy_static = "1.4.0"
thiserror = "1.0"
rand = "0.7.3"

[dev-dependencies]
test_helpers = { path = "../test_helpers" }

[build-dependencies]
prost-build = "0.6"