[package]
name = "pitaya_macros"
version = "0.1.0"
authors = ["Leonardo Hahn <leonardo.hahn@tfgco.com>"]
edition = "2018"

[lib]
proc_macro = true

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
pitaya_core = { path = "../pitaya_core" }

tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
prost = "0.6.1"
slog = { version = "2.5", features = ["max_level_trace"] }
quote = "1.0.7"
proc-macro2 = "1.0.19"
syn = "1.0.38"
serde = "1.0.115"
serde_json = "1.0.57"

