[package]
name = "prometheus_metrics"
version = "0.1.0"
authors = ["Leonardo Hahn <leonardo.hahn@tfgco.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
pitaya_core = { path = "../pitaya_core" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
prometheus = "0.9"
hyper = "0.13"
slog = { version = "2.5", features = ["max_level_trace"] }